--- a/assets/main.css
+++ b/assets/main.css
@@ -1,16 +1,16 @@
 body {
-    background-color: #222;
-    color: white;
+    background-color: #2E1C2B;
+    color: #eaeaea;
     margin: 0;
 }
 
 .container {
-    margin: auto;
-    width: 50%;
     padding: 10px;
 }
 
 .layout {
+    margin: auto;
+    width: 50%;
     padding: 50px;
     display: grid;
     grid-row-gap: 50px;
@@ -19,7 +19,6 @@ body {
 
 h1 {
     font-size: 3vh;
-    text-align: center;
 }
 
 h2 {
@@ -29,11 +28,15 @@ h2 {
 }
 
 .about {
-    opacity: 1;
+    display: grid;
+    grid-template-rows: auto auto;
 }
 
-.about {
-    opacity: 1;
+.header {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    width: 100%;
 }
 
 .skills {
@@ -41,10 +44,6 @@ h2 {
 }
 
 .projects {
-    opacity: 1;
-}
-
-.links {
     opacity: 1;
 }
 
@@ -57,6 +56,13 @@ h2 {
     opacity: 1;
 }
 
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .logos img {
     height: 3vh;
     width: 3vh;
@@ -67,28 +73,73 @@ h2 {
     width: 3vh;
 }
 
-.fa-python {
-    color: #ffde57;
-}
-
-.fa-html5 {
-    color: #e34f26;
-}
-
-.fa-css3-alt {
-    color: #264de4;
-}
-
-.fa-js {
-    color: #f7df1e;
+.fa-python,
+.fa-html5,
+.fa-css3-alt,
+.fa-js,
+.fa-php,
+.fa-linkedin,
+.fa-github,
+.fa-envelope {
+    color: white;
 }
 
 .fa-php {
-    color: #ac5cd9;
     position: relative;
     left: -.5vh;
 }
 
-.fa-envelope {
-    color: white;
+.fa-python:hover {
+    color: #ffde57;
 }
+
+.fa-html5:hover {
+    color: #e34f26;
+}
+
+.fa-css3-alt:hover {
+    color: #264de4;
+}
+
+.fa-js:hover {
+    color: #f7df1e;
+}
+
+.fa-php:hover {
+    color: #ac5cd9;
+
+}
+
+.fa-linkedin:hover {
+    color: #0077b5;
+}
+
+.fa-github:hover {
+    color: #2dba4e;
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1.15, 0.85);
+    }
+    20% {
+        transform: scale(1, 1);
+    }
+    40% {
+        transform: scale(0.85, 1.15) translateY(-1.25vh);
+    }
+    60% {
+        transform: scale(1, 1);
+    }
+    80% {
+        transform: scale(1, 1) translateY(-0.5vh);
+    }
+    100% {
+        transform: scale(1, 1) translateY(0);
+    }
+}
+  
+.bounce {
+    animation: bounce 0.7s ease-in-out;
+}
+  
