--- a/assets/main.css
+++ b/assets/main.css
@@ -1,20 +1,20 @@
 @font-face {
-    font-family: "Lato";
-    src: url("./fonts/Lato-Regular.ttf");
+    font-family: "Barlow";
+    src: url("./fonts/Barlow-Regular.ttf");
 }
 
 @font-face {
-    font-family: "Lato-Bold";
-    src: url("./fonts/Lato-Bold.ttf");
+    font-family: "Barlow-Bold";
+    src: url("./fonts/Barlow-Bold.ttf");
 }
 
 @font-face {
-    font-family: "Lato-Thin";
-    src: url("./fonts/Lato-Thin.ttf");
+    font-family: "Barlow-Thin";
+    src: url("./fonts/Barlow-Thin.ttf");
 }
 
 body {
-    font-family: "Lato";
+    font-family: "Barlow";
     background-color: #2E1C2B;
     color: #eaeaea;
     overflow: hidden;
@@ -22,8 +22,8 @@ body {
 
 .glow {
     position: absolute;
-    width: 100vh;
-    height: 100vh;
+    width: 80vh;
+    height: 80vh;
     border-radius: 50%;
     pointer-events: none;
     background: radial-gradient(circle, #4A1942 0%, transparent 70%);
@@ -53,32 +53,16 @@ body {
 }
 
 h1 {
-    font-family: "Lato";
+    font-family: "Barlow";
     font-size: 4vh;
     text-shadow: 0px 5px 4px #050404;
 }
 
 h2 {
-    font-family: "Lato-Thin";
+    font-family: "Barlow-Thin";
     font-size: 2vh;
     text-align: justify;
     text-justify: inter-word;
-}
-
-.layout {
-    background-color: #ffde57;
-}
-
-.about {
-    background-color: #0077b5;
-}
-
-.skills {
-    background-color: #2dba4e;
-}
-
-.projects {
-    background-color: #e34f26;
 }
 
 .header {
