--- a/assets/main.css
+++ b/assets/main.css
@@ -289,24 +289,39 @@ a {
     color: #eaeaea;
 }
 
-.repos-arrow:hover {
-    color: #ff0000;
+.repos-track {
+    display: block;
+    width: 100%;
+    overflow: hidden;
 }
 
-.github-repos {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+.repos-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.github-repos .repo {
-    height: 40vh;
-    border-radius: 25px;
-    border: 4px solid #29001e;
+.repos-list .repo {
+    flex: 0 0 calc((100% / 3) - 1.33333em);
+    margin-right: 1.33333em;
+    height: 30vh;
+    border-radius: 10px;
+    border: 3px solid #eaeaea;
     background: #050404;
+}  
+
+.repo a:hover {
+    text-decoration: underline;
 }
 
 .repo h1 {
-    font-size: 2.5em;
+    font-size: 2em;
+}
+
+.repo h2 {
+    font-size: 1.5em;
+}
+
+.repo p {
+    font-size: 1em;
 }
