--- a/assets/main.css
+++ b/assets/main.css
@@ -69,6 +69,10 @@ h2 {
     margin-bottom: 5vh;
 }
 
+p {
+    font-family: "Barlow-Thin";
+}
+
 a {
     text-decoration: none;
 }
@@ -274,6 +278,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    margin-top: 1vh;
 }
 
 .repos-arrow {
@@ -298,30 +303,106 @@ a {
 .repos-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .repos-list .repo {
-    flex: 0 0 calc((100% / 3) - 1.33333em);
-    margin-right: 1.33333em;
+    flex: 0 0 32%;
+    margin-right: 1%;
     height: 30vh;
     border-radius: 10px;
-    border: 3px solid #eaeaea;
-    background: #050404;
-}  
+    border: 2px solid #893168;
+    background: #4A1942;
+}
 
-.repo a:hover {
+.repo-inner {
+    display: grid;
+    height: calc(100% - 20px);
+    grid-auto-flow: rows;
+    grid-template-rows: auto 1fr auto;
+    margin: 10px;
+}
+
+.repo-inner a {
+    text-decoration: none;
+}
+
+.repo-inner a:hover {
     text-decoration: underline;
 }
 
-.repo h1 {
+.repo-inner h1 {
     font-size: 2em;
+    color: #eaeaea;
+    text-decoration: none;
+    text-shadow: none;
 }
 
-.repo h2 {
-    font-size: 1.5em;
-}
-
-.repo p {
+.repo-inner h2 {
     font-size: 1em;
+    height: calc(100% - 15px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.repo-languages {
+    display: flex;
+    align-items: flex-end;
+}
+
+.repo-language {
+    display: flex;
+    flex-direction: row;
+    padding-right: 10px;
+}
+
+.repo-language p {
+    font-size: 1em;
+    margin: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.language {
+    border-radius: 50%;
+    height: .7em;
+    width: .7em;
+    display: inline-block;
+    align-self: center;
+}
+
+.language.python {
+    background-color: #ffde57;
+}
+
+.language.c {
+    background-color: #03599c;
+}
+
+.language.cs {
+    background-color: #68217a;
+}
+
+.language.cpp {
+    background-color: #004482;
+}
+
+.language.html {
+    background-color: #e34f26;
+}
+
+.language.css {
+    background-color: #264de4;
+}
+
+.language.javascript {
+    background-color: #f7df1e;
+}
+
+.language.php {
+    background-color: #ac5cd9;
+}
+
+.language.assembly {
+    background-color: #eaeaea;
 }
