Started mobile compatibility

--- a/assets/main.css
+++ b/assets/main.css
@@ -49,7 +49,7 @@ body {
 
 h1 {
     font-family: "Barlow";
-    font-size: 5vh;
+    font-size: 3.5vh;
     text-shadow: 0px 5px 4px #050404;
     margin-top: auto;
     margin-bottom: 1vh;
@@ -57,16 +57,16 @@ h1 {
 
 h2 {
     font-family: "Barlow-Thin";
-    font-size: 2.5vh;
+    font-size: 2vh;
     text-align: justify;
     text-justify: inter-word;
     margin-top: 0.5vh;
-    margin-bottom: 5vh;
+    margin-bottom: 2vh;
 }
 
 p {
     font-family: "Barlow-Thin";
-    font-size: 1.5vh;
+    font-size: 1vh;
 }
 
 a {
@@ -100,49 +100,176 @@ a {
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: min-content;
-    gap: 1vh;
+    gap: 3vh;
     text-shadow: 0px 5px 4px #050404;
 }
 
 .logos i {
     will-change: transform, opacity;
     transform: translateX(0) scale(var(--sizeX, 1), var(--sizeY, 1));
-    height: 5vh;
-    width: 3vw;
-    font-size: 5vh;
+    height: 3.5vh;
+    width: 2vw;
+    font-size: 3.5vh;
     opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@media only screen and (min-width:320px) and (max-width:480px) {
+.repos-wrapper {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: auto 1fr auto;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 1vh;
+}
+
+.repos-arrow {
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: none;
+    box-sizing: border-box;
+}
+
+.repos-arrow i {
+    color: #888888;
+    font-size: 2em;
+    transition: color 0.2s ease-in-out;
+}
+
+.repos-track {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+}
+
+.repos-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    box-sizing: border-box;
+}
+
+.repos-list .repo {
+    flex: 0 0 calc(100% - 10px);
+    margin: 10px;
+    height: 30vh;
+    border: 2px solid #893168;
+    background: #4A1942;
+    box-sizing: border-box;
+    opacity: 1;
+}
+
+.repo-inner {
+    display: grid;
+    height: calc(100% - 20px);
+    grid-auto-flow: rows;
+    grid-template-rows: auto 1fr auto;
+    margin: 10px;
+}
+
+.repo-inner a {
+    text-decoration: none;
+}
+
+.repo-inner a:hover {
+    text-decoration: underline;
+}
+
+.repo-inner h1 {
+    font-size: 2.5vh;
+    color: #eaeaea;
+    text-decoration: none;
+    text-shadow: none;
+}
+
+.repo-inner h2 {
+    font-size: 2vh;
+    height: calc(100% - 15px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.repo-languages {
+    display: flex;
+    align-items: flex-end;
+}
+
+.repo-language {
+    display: flex;
+    flex-direction: row;
+    padding-right: 10px;
+}
+
+.repo-language p {
+    font-size: 1.5vh;
+    margin: 0;
+    padding: 0 5px;
+}
+
+.language {
+    border-radius: 50%;
+    height: 1vh;
+    width: 1vh;
+    display: inline-block;
+    align-self: center;
+}
+
+@media only screen
+and (min-width: 1224px) {
     .layout {
         width: 70%;
         padding: 40px;
     }
 
     h1 {
-        font-size: 3vh;
+        font-size: 5vh;
     }
 
     h2 {
-        font-size: 1.5vh;
+        font-size: 2.5vh;
+        margin-bottom: 5vh;
     }
 
     p {
-        font-size: 1vh;
+        font-size: 1.5vh;
     }
 
     .logos {
-        gap: 1vh;
+        gap: 3vh;
     }
 
     .logos i {
-        height: 3vh;
-        width: 1.8vh;
+        height: 5vh;
+        width: 3vh;
+        font-size: 5vh;
+    }
+
+    .repos-arrow i {
+        font-size: 3em;
+    }
+
+    .repos-list .repo {
+        flex: 0 0 calc(50% - 10px);
+    }
+
+    .repo-inner h1 {
         font-size: 3vh;
     }
+
+    .repo-inner h2 {
+        font-size: 2vh;
+    }
+
+    .repo-language p {
+        font-size: 1.5vh;
+    }
+
 }
 
 .fa-github,
@@ -279,6 +406,15 @@ a {
     transform: scale(var(--sizeX, 1), var(--sizeY, 1));
 }
 
+.repos-arrow:hover {
+    cursor: pointer;
+}
+
+.repos-arrow i.hover,
+.repos-arrow i:hover {
+    color: #eaeaea;
+}
+
 .name {
     font-family: "Barlow-BoldItalic";
 }
@@ -312,120 +448,6 @@ a {
 .program-language.cpp:hover,
 .program-language.cpp.hover {
     color: #004482;
-}
-
-.repos-wrapper {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: auto 1fr auto;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-top: 1vh;
-}
-
-.repos-arrow {
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: none;
-    border: none;
-    box-sizing: border-box;
-}
-
-.repos-arrow i {
-    color: #888888;
-    font-size: 3em;
-    transition: color 0.2s ease-in-out;
-}
-
-.repos-arrow:hover {
-    cursor: pointer;
-}
-
-.repos-arrow i.hover,
-.repos-arrow i:hover {
-    color: #eaeaea;
-}
-
-.repos-track {
-    display: block;
-    width: 100%;
-    overflow: hidden;
-}
-
-.repos-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    box-sizing: border-box;
-}
-
-.repos-list .repo {
-    flex: 0 0 calc(50% - 10px);
-    margin: 10px;
-    height: 30vh;
-    border: 2px solid #893168;
-    background: #4A1942;
-    box-sizing: border-box;
-    opacity: 0;
-}
-
-.repo-inner {
-    display: grid;
-    height: calc(100% - 20px);
-    grid-auto-flow: rows;
-    grid-template-rows: auto 1fr auto;
-    margin: 10px;
-}
-
-.repo-inner a {
-    text-decoration: none;
-}
-
-.repo-inner a:hover {
-    text-decoration: underline;
-}
-
-.repo-inner h1 {
-    font-size: 3vh;
-    color: #eaeaea;
-    text-decoration: none;
-    text-shadow: none;
-}
-
-.repo-inner h2 {
-    font-size: 2vh;
-    height: calc(100% - 15px);
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.repo-languages {
-    display: flex;
-    align-items: flex-end;
-}
-
-.repo-language {
-    display: flex;
-    flex-direction: row;
-    padding-right: 10px;
-}
-
-.repo-language p {
-    font-size: 1.5vh;
-    margin: 0;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-.language {
-    border-radius: 50%;
-    height: 1vh;
-    width: 1vh;
-    display: inline-block;
-    align-self: center;
 }
 
 .language.python {
