--- a/assets/main.css
+++ b/assets/main.css
@@ -21,6 +21,9 @@
 body {
     font-family: "Barlow";
     color: #eaeaea;
+    background: linear-gradient(-45deg, #2E1C2B, #4A1942);
+    background-blend-mode:multiply;
+    background-size: 100% 100%;
     overflow: hidden;
 }
 
@@ -30,9 +33,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(-45deg, #2E1C2B, #4A1942);
-    background-blend-mode:multiply;
-    background-size: 100% 100%;
     display: inline-block;
     justify-content: center;
 }
@@ -49,24 +49,24 @@ body {
 
 h1 {
     font-family: "Barlow";
-    font-size: 3.5vh;
+    font-size: 1.5em;
     text-shadow: 0px 2px 4px #050404;
     margin-top: auto;
-    margin-bottom: 1vh;
+    margin-bottom: 0.3rem;
 }
 
 h2 {
     font-family: "Barlow-Thin";
-    font-size: 2vh;
+    font-size: 0.8em;
     text-align: justify;
     text-justify: inter-word;
-    margin-top: 0.5vh;
-    margin-bottom: 2vh;
+    margin-top: 0.3rem;
+    margin-bottom: 1rem;
 }
 
 p {
     font-family: "Barlow-Thin";
-    font-size: 1vh;
+    font-size: 0.3rem;
 }
 
 a {
@@ -75,10 +75,10 @@ a {
 
 .header {
     width: 100%;
-    align-items: baseline;
+    align-items: center;
     display: grid;
     grid-template-columns: 1fr auto;
-    column-gap: 2vh;
+    column-gap: 1rem;
 }
 
 .about {
@@ -100,16 +100,16 @@ a {
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: min-content;
-    gap: 3vh;
+    gap: 1.3rem;
     text-shadow: 0px 2px 4px #050404;
 }
 
 .logos i {
     will-change: transform, opacity;
     transform: translateX(0) scale(var(--sizeX, 1), var(--sizeY, 1));
-    height: 3.5vh;
-    width: 2vw;
-    font-size: 3.5vh;
+    height: 1em;
+    width: 0.3em;
+    font-size: 1.5em;
     opacity: 0;
     display: flex;
     justify-content: center;
@@ -123,11 +123,11 @@ a {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin-top: 1vh;
+    margin: 0.3rem 0;
 }
 
 .repos-arrow {
-    height: 10vh;
+    height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -158,7 +158,7 @@ a {
 .repos-list .repo {
     flex: 0 0 calc(100% - 10px);
     margin: 10px;
-    height: 30vh;
+    height: 12rem;
     border: 2px solid #893168;
     background: #4A1942;
     box-sizing: border-box;
@@ -182,14 +182,14 @@ a {
 }
 
 .repo-inner h1 {
-    font-size: 2.5vh;
+    font-size: 1.2em;
     color: #eaeaea;
     text-decoration: none;
     text-shadow: none;
 }
 
 .repo-inner h2 {
-    font-size: 2vh;
+    font-size: 0.8em;
     height: calc(100% - 15px);
     overflow: hidden;
     text-overflow: ellipsis;
@@ -207,15 +207,15 @@ a {
 }
 
 .repo-language p {
-    font-size: 1.5vh;
+    font-size: 0.8em;
     margin: 0;
     padding: 0 5px;
 }
 
 .language {
     border-radius: 50%;
-    height: 1vh;
-    width: 1vh;
+    height: 0.5em;
+    width: 0.5em;
     display: inline-block;
     align-self: center;
 }
@@ -223,40 +223,51 @@ a {
 /* Phones (landscape) */
 @media only screen
 and (orientation: landscape) {
+    body {
+        overflow: auto;
+    }
+
     h1 {
-        font-size: 5vh;
+        font-size: 1.5em;
     }
 
     h2 {
-        font-size: 3vh;
-        margin-bottom: 2vh;
+        font-size: 0.5em;
     }
 
     p {
-        font-size: 1.5vh;
+        font-size: 0.5em;
     }
 
     .logos {
-        gap: 3.5vh;
-        text-shadow: 0px 2px 4px #050404;
+        gap: 0.5rem;
     }
 
     .logos i {
-        height: 5vh;
-        width: 3vh;
-        font-size: 5vh;
+        height: 1.5em;
+        width: 1em;
+        font-size: 1.5em;
+    }
+
+    .repos-wrapper {
+        margin: 1rem 0;
+    }
+
+    .repos-list .repo {
+        flex: 0 0 calc(50% - 10px);
+        height: 12rem;
     }
 
     .repo-inner h1 {
-        font-size: 4vh;
+        font-size: 1.2em;
     }
 
     .repo-inner h2 {
-        font-size: 3vh;
+        font-size: 0.8em;
     }
 
     .repo-language p {
-        font-size: 3vh;
+        font-size: 0.8em;
     }
 
     .language {
