--- a/assets/main.css
+++ b/assets/main.css
@@ -24,7 +24,7 @@ body {
     background: linear-gradient(-45deg, #2E1C2B, #4A1942);
     background-blend-mode:multiply;
     background-size: 100% 100%;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .container {
@@ -35,6 +35,7 @@ body {
     height: 100%;
     display: inline-block;
     justify-content: center;
+    overflow: hidden;
 }
 
 .layout {
@@ -66,7 +67,7 @@ h2 {
 
 p {
     font-family: "Barlow-Thin";
-    font-size: 0.3rem;
+    font-size: 0.3em;
 }
 
 a {
@@ -78,7 +79,7 @@ a {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr auto;
-    column-gap: 1rem;
+    column-gap: 1em;
 }
 
 .about {
@@ -100,7 +101,7 @@ a {
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: min-content;
-    gap: 1.3rem;
+    gap: 1.3em;
     text-shadow: 0px 2px 4px #050404;
 }
 
@@ -127,7 +128,7 @@ a {
 }
 
 .repos-arrow {
-    height: 3rem;
+    height: 3em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -144,25 +145,25 @@ a {
 
 .repos-track {
     display: block;
-    width: 100%;
+    width: round(to-zero, 100%, 1px);
     overflow: hidden;
 }
 
 .repos-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     box-sizing: border-box;
 }
 
 .repos-list .repo {
     flex: 0 0 calc(100% - 10px);
     margin: 10px;
-    height: 12rem;
+    height: 12em;
     border: 2px solid #893168;
     background: #4A1942;
     box-sizing: border-box;
-    opacity: 1;
+    opacity: 0;
 }
 
 .repo-inner {
@@ -207,15 +208,15 @@ a {
 }
 
 .repo-language p {
-    font-size: 0.8em;
+    font-size: 0.5em;
     margin: 0;
     padding: 0 5px;
 }
 
 .language {
     border-radius: 50%;
-    height: 0.5em;
-    width: 0.5em;
+    height: 0.3em;
+    width: 0.3em;
     display: inline-block;
     align-self: center;
 }
@@ -223,7 +224,7 @@ a {
 /* Phones (landscape) */
 @media only screen
 and (orientation: landscape) {
-    body {
+    .container {
         overflow: auto;
     }
 
@@ -240,7 +241,7 @@ and (orientation: landscape) {
     }
 
     .logos {
-        gap: 0.5rem;
+        gap: 0.5em;
     }
 
     .logos i {
@@ -255,7 +256,7 @@ and (orientation: landscape) {
 
     .repos-list .repo {
         flex: 0 0 calc(50% - 10px);
-        height: 12rem;
+        height: 12em;
     }
 
     .repo-inner h1 {
@@ -271,8 +272,8 @@ and (orientation: landscape) {
     }
 
     .language {
-        height: 2vh;
-        width: 2vh;
+        height: 0.5em;
+        width: 0.5em;
     }
 }
 
